# studcamp

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  README.md  SYSTEM.md  capacitor.config.json  docker-compose.yml  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  studcamp.db  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-21.jsonl  turns-2026-04-21.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
_archive/: README.md
android/: build.gradle  gradle-hosts
android/app/: build.gradle
app/: App.tsx  main.tsx  routes.tsx  setup-tests.ts  styles.css  vite-env.d.ts
app/components/: admin-ui.tsx  app-loading.tsx  auth-guard.tsx  badge-page.tsx  campus-page.tsx  documents-page.tsx  home-page.tsx  layout.tsx  login-page.tsx  materials-page.tsx  people-page.tsx  profile-page.tsx  projects-page.tsx  schedule-page.tsx  story-viewer.tsx
app/components/admin/: AdminEditor.tsx  (+4 more)
app/hooks/: useBodyScrollLock.ts  useMobile.ts
app/lib/: api.test.ts  api.ts  app-data-admin.ts  app-data-normalize.ts  app-data.tsx  cache.ts  domain.ts  events.ts  llm-settings.ts  navigation.ts  options.ts  telegram.ts  viewport.ts
app/pages/: badge.tsx  campus.tsx  documents.tsx  login.tsx
backend/: Dockerfile  __init__.py  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260418_0001_initial.py  20260419_0002_real_camp_snapshot.py  20260419_0003_admin_event_teachers.py  20260421_0004_project_mentor_fields.py  20260421_0005_day_titles_and_attendance.py  20260421_0006_is_hidden.py  20260422_0007_project_teams.py  20260422_0008_camps_is_active.py  20260422_0009_camp_scope_content.py  20260422_0010_user_telegram_id.py
backend/app/: __init__.py  main.py  seed_data.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  bootstrap.py  llm.py
backend/app/api/routes/admin/: __init__.py  _helpers.py  attendance.py  camp.py  campus.py  documents.py  events.py  materials.py  projects.py  resources.py  rooms.py  stories.py  teams.py  updates.py  users.py  visibility.py
backend/app/core/: config.py  rate_limit.py  security.py  telegram_auth.py  url_guard.py
backend/app/db/: __init__.py  seed.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: api.py
backend/app/services/: __init__.py  bootstrap.py  llm_prompt.py  telegram_membership.py
backend/app/services/bootstrap/: __init__.py  build.py  helpers.py  loaders.py  serializers.py
backend/seeds/: initial_data.json
backend/tests/: conftest.py  test_admin_api.py  test_auth_and_bootstrap.py  test_security.py  test_telegram_auth.py
backend/tests/fixtures/: generate_mock.py  mock_snapshot.json
styles/: theme.css
(+110 files in other folders)
