# Backend package: runtime + dev-зависимости + конфиги инструментов.
# Обновление версий: `pip install --upgrade <pkg>`, затем `pip freeze | grep`,
# правишь здесь, прогоняешь pytest, коммитишь.

[project]
name = "studcamp-backend"
version = "0.1.0"
description = "Studcamp FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.136.0",
  "uvicorn[standard]==0.44.0",
  "gunicorn==25.3.0",
  "sqlalchemy==2.0.49",
  "alembic==1.18.4",
  "psycopg[binary]==3.3.3",
  "pydantic==2.13.3",
  "pydantic-settings==2.14.0",
  "httpx==0.28.1",
  "bcrypt==5.0.0",
  "pytest==9.0.3",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.11",
  "mypy==1.20.2",
  "coverage==7.13.5",
  "pytest-cov==7.1.0",
  "pre-commit>=4.5,<5",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

# Мы не собираем реальный Python-пакет (backend/ лежит рядом с app/ и
# импортируется как backend.app.*). pyproject нужен только как единый
# манифест зависимостей + конфиг инструментов. py-modules = [] говорит
# setuptools'у не пытаться ничего публиковать.
[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = [
  "B008",    # Depends() as default — идиома FastAPI
  "N805",    # first arg of pydantic validators не обязан быть `self`
  "RUF001",  # ambiguous string chars — у нас почти весь интерфейс на русском,
  "RUF002",  # кириллица неизбежно «похожа» на латиницу. Проверять не нужно.
  "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Pydantic-схемы публичного API намеренно в camelCase (контракт с фронтом).
"app/schemas/**/*.py" = ["N815"]
"app/api/routes/**/*.py" = ["N815"]
"tests/**/*.py" = ["E501", "N802"]
"alembic/versions/**/*.py" = ["E501"]
"alembic/env.py" = ["E402"]
"app/services/llm_prompt.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["alembic/versions/"]
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [".."]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["alembic/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
